force-app/main/default/objects/Rendered_Field__c/Rendered_Field__c.object-meta.xml
<CustomObject>
    <label>Rendered Field</label>
    <nameField>
        <label>Rendered Field Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rendered Fields</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>