force-app/main/default/objects/Rendered_Field__c/fields/Evaluation_Expression__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Expression__c</fullName>
    <description>Expression will be evaluated from left to right, specify accordingly (braces won&apos;t help)</description>
    <inlineHelpText>Expression will be evaluated from left to right, specify accordingly (braces won&apos;t help)</inlineHelpText>
    <label>Evaluation Expression</label>
    <length>255</length>
    <type>Text</type>
</CustomField>