force-app/main/default/objects/Rendered_Field__c/fields/Rendered_Object__c.field-meta.xml
<CustomField>
    <fullName>Rendered_Object__c</fullName>
    <label>Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>