force-app/main/default/objects/Rendered_Field__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Rendered_Object__c</columns>
    <columns>Related_Object_Name__c</columns>
    <columns>Evaluation_Expression__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>